--- a/src/main/resources/templates/dashboard/fees-salary.html
+++ b/src/main/resources/templates/dashboard/fees-salary.html
@@ -1,8 +1,17 @@
 <div class="col-md-4 col-lg-3">
-    <div class="single_feature">
+    <a class="single_feature" href="/fees">
         <div class="single_feature_part">
             <img src="/img/dashboard/fees.png" />
-            <h4>Fees and Salary</h4>
+            <h4>Manage Fees</h4>
         </div>
-    </div>
+    </a>
 </div>
+
+<div class="col-md-4 col-lg-3">
+        <a class="single_feature"  href="/salaries">
+            <div class="single_feature_part">
+                <img src="/img/dashboard/salary.png" />
+                <h4>Manage Salaries</h4>
+            </div>
+        </a>
+    </div>
