--- a/src/main/resources/templates/dashboard/salary.html
+++ b/src/main/resources/templates/dashboard/salary.html
@@ -1,8 +1,8 @@
 <div class="col-md-4 col-lg-3">
-    <div class="single_feature">
+    <a class="single_feature" href="/my-salaries">
         <div class="single_feature_part">
-            <img src="/img/dashboard/fees.png" />
-            <h4>Salary</h4>
+            <img src="/img/dashboard/salary.png" />
+            <h4>My Salary Installments</h4>
         </div>
-    </div>
+    </a>
 </div>
