--- a/src/main/resources/templates/dashboard/fees.html
+++ b/src/main/resources/templates/dashboard/fees.html
@@ -1,8 +1,8 @@
 <div class="col-md-4 col-lg-3">
-    <a class="single_feature">
+    <a class="single_feature" href="/my-fees">
         <div class="single_feature_part">
             <img src="/img/dashboard/fees.png" />
-            <h4>Fees</h4>
+            <h4>My Fee Payments</h4>
         </div>
     </a>
 </div>
