--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -8,16 +8,14 @@
       <div class="container">
          <div class="row">
             <div class="col-lg-8 mb-5 mb-lg-0">
-            <h2>User Info Page</h2>
-            <h3>Welcome <span th:utext="${profile.name}" /></h3>
+            <h3><span th:utext="${profile.name}" /></h3>
             <br/>
             <p>
-               Username: <span th:utext="${profile.userName}"/>
+               <h4>Username</h4> <div th:utext="${profile.userName}"/>
                <br/>
-               Gender: <span th:utext="${profile.gender}"/>
-               <br/>
-               Address: <span th:utext="${profile.address}"/>
+               <h4>Address</h4> <div th:utext="${profile.address}"/>
                </br/>
+               <h4>Logged in as</h4><div id="roles" sec:authentication="principal.authorities" />
             </p>
             </div>
          </div>
@@ -26,6 +24,11 @@
 
     <th:block th:include="footer"></th:block>
     
+    <script>
+       $(document).ready(function(){
+          $('#roles').html($('#roles').html().replace(/_/g, " ").replace("[", "").replace("]", "").replace(/,/g, "<br />"));
+       })
+    </script>
 </body>
 
 </html>
